--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,4 +17,5 @@
 
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> |
+<%= link_to 'Delete Post', @post, method: :delete%>
